[gd_scene load_steps=4 format=3 uid="uid://cy35h8u1h65fm"]

[ext_resource type="Script" uid="uid://bxt4bqahy2x4j" path="res://scripts/chest_opening_cutscene.gd" id="1_fpdhx"]
[ext_resource type="Texture2D" uid="uid://buwp30wxrjfd7" path="res://assets/sprites/treasureChestOpened.png" id="2_2i0i2"]
[ext_resource type="Texture2D" uid="uid://do0p0hyg4ejki" path="res://assets/sprites/scroll.png" id="3_2i0i2"]

[node name="ChestOpeningCutscene" type="Node2D"]
script = ExtResource("1_fpdhx")

[node name="ChestSprite2D" type="Sprite2D" parent="."]
position = Vector2(581, 333)
scale = Vector2(15.7556, 15.7556)
texture = ExtResource("2_2i0i2")

[node name="ScrollSprite2D" type="Sprite2D" parent="."]
position = Vector2(581, 321)
scale = Vector2(8.1017, 8.1017)
texture = ExtResource("3_2i0i2")

[node name="ScrollText" type="Label" parent="."]
offset_left = 417.0
offset_top = 129.0
offset_right = 738.0
offset_bottom = 503.0
autowrap_mode = 3

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
